src/objects/Filtro_de_lista__c.object
<CustomObject>
    <fields>
        <fullName>Campo__c</fullName>
        <label>Campo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparacion__c</fullName>
        <label>Comparación</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                    <label>menor</label>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                    <label>menor o igual</label>
                </value>
                <value>
                    <fullName>=</fullName>
                    <label>igual</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                    <label>distinto</label>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                    <label>mayor o igual</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                    <label>mayor</label>
                </value>
                <value>
                    <fullName>like</fullName>
                    <label>contiene</label>
                </value>
                <value>
                    <fullName>not like</fullName>
                    <label>no contiene</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vista__c</fullName>
        <label>Vista de lista personalizada</label>
        <referenceTo>Vista_de_lista_personalizada__c</referenceTo>
        <relationshipLabel>Filtros de lista</relationshipLabel>
        <relationshipName>Filtros</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Filtro de lista</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filtros de lista</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>